// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`causes styles with lint to log errors 1`] = `
.c0 {
  color: red;
  line-height: -;
}

<h1
  className="c0"
>
  Who wrote these styles anyway??
</h1>
`;

exports[`styles without lint log nothing 1`] = `
.c0 {
  color: red;
}

<h1
  className="c0"
>
  Who wrote these styles anyway??
</h1>
`;
